Deadline frame for next Step corrected.

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
 				<configuration>
 					<mainClass>jborg.gtdForBash.GTDCLI</mainClass>
 				</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>java</goal>
+							</goals>
+						</execution>
+					</executions>
 			</plugin>
 		
 	      </plugins>
